--- a/MyLaravel1/resources/sass/app.scss
+++ b/MyLaravel1/resources/sass/app.scss
@@ -1,1 +1,45 @@
 //
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  & a {
+    color: #000;
+  }
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background: pink;
+  text-align: center;
+
+  .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: column;
+
+    .main-container {
+      h2 {
+        margin: 20px auto;
+      }
+
+      ul {
+        height: 270px;
+        overflow-y: scroll;
+        text-align: left;
+        max-width: 300px;
+        margin: 0 auto;
+
+        li {
+          margin: 15px auto;
+
+        }
+      }
+    }
+  }
+}
