--- a/MyLaravel1/public/css/app.css
+++ b/MyLaravel1/public/css/app.css
@@ -29,7 +29,7 @@ body .container .main-container h2 {
 }
 
 body .container .main-container ul {
-  height: 270px;
+  max-height: 270px;
   overflow-y: scroll;
   text-align: left;
   max-width: 300px;
